<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="64dp"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="30sp"
        android:fontFamily="sans-serif-light"
        android:text="@string/app_name"/>


    <Space
        android:layout_width="wrap_content"
        android:layout_height="80dp"/>

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:text="@string/btnAceptar"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp"/>

    <ToggleButton
        android:id="@+id/btnToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/btnToggleOn"
        android:textOff="@string/btnToggleOff"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <Switch
        android:id="@+id/btnSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchPadding="10dp"
        android:text="@string/btnSwitch"/>

    <Space
    android:layout_width="wrap_content"
    android:layout_height="20dp"/>

    <ImageButton
        android:id="@+id/btnImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/check"
        android:contentDescription="@string/btnImagen"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/btnImagenTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnImagenTxt"
        android:drawableLeft="@drawable/check"
        android:drawablePadding="5dp"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/txtMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

</LinearLayout>